Ensure main nav dropdown and its divider are properly displayed (#1121)
* Gemfile: drop required derived dependencies

* Fix typo in mixin name

* Ensure main nav dropdown and its divider are properly displayed

Followup to #1106. Contributes to #527.

- Divider used to be invisible. Fixed color.
- Realigned dropdown relative to "Dart 2" toggle to match pre-BS-4 alignment.

--- a/src/_assets/css/_icons.scss
+++ b/src/_assets/css/_icons.scss
@@ -1,6 +1,6 @@
 // Material design icons
 
-@mixin md-icon-contennt($icon-name, $width: '') {
+@mixin md-icon-content($icon-name, $width: '') {
   font-family: 'Material Icons';
   content: $icon-name;
   @if $width {
@@ -10,7 +10,7 @@
 }
 
 @mixin md-icon-before($icon-name) {
-  &:before { @include md-icon-contennt($icon-name); }
+  &:before { @include md-icon-content($icon-name); }
 }
 
 // Icons based on custom font "dart"
